css/main.css
/* ... */
form input[type=file] {
	margin-left: 13px;
	display: inherit;
}

form input[type=text],
form input[type=password]{
	margin-left: 0;
	/*width: 100%;*/
}

.user-account input[type=radio] {
	margin-left: 0;
}

.user-account .input-tag {
	width: 120px;
}

@media screen and (min-width: 768px) {
	.sign-up-form,
	.signIn-form {
		margin-top: 20%;
		text-align: inherit;
	}

	form label {
		min-width: 180px;
		text-align: right;
	}

	.user-account textarea,
	.user-account input[type=text],
	.user-account textarea,
	#edit-product.user-account textarea,
	#add-product.user-account textarea,
	.user-account input[type=password],
	.user-account input[type=number] {
		margin-left: 1em;
		width: 50%;
		max-width: 50%; /* for the resize of the text area */
	}

	.user-account .input-tag {
		width: 100px !important;
	}

	.user-account input[type=radio] {
		margin-left: 1em !important;
	}

	.sign-up-form input[type=text],
	.sign-up-form input[type=password],
	.signIn-form input[type=text],
	.signIn-form input[type=password] {
		margin-left: 1em;
		min-width: 60%;
	}

	.sign-up-form #submit,
	.signIn-form #submit {
		width: 40%;
		margin-left: 30%;
	}

	.user-account [type=submit] {
		width: 50%;
		margin-left: 197px;
	}
}

.form-control-custom {
	height: 34px;
	padding: 6px 12px;
	font-size: 14px;
	line-height: 1.42857;
	color: #555;
	background-color: #FFF;
	background-image: none;
	border: 1px solid #CCC;
	border-radius: 4px;
	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
	transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
}
.transparent-form {
  /*background-color: rgba(255, 255, 255, .95);*/
  background-color: rgb(255, 255, 255);
  text-align: center;
  margin-top: 4%;
  margin-bottom: 2%;
  position: relative;
  color: rgba(115, 90, 41, 0.8);
  font-size: .8em;
  border: 1px rgba(51, 40, 18, 1);
  border-radius: 5px;
  padding: 2em;
}

@media screen and (min-width: 768px) {
	.transparent-form {
		text-align: inherit;
		font-size: 1em;
		border-radius: 12px;
		margin-top: 4%;
  }
}
.nav-stacked.active {
  color: rgba(115, 90, 41, 0.8);
}
  .transparent-menu {
  background-color: rgba(255, 255, 255, .8);
  text-align: left;
  margin: auto;
  width: 20%;
  margin-top: 10%;
  margin-bottom: 10%;
  position: relative;
  color: rgba(115, 90, 41, 0.8);
  font-family: Biko, sans-serif;
  font-size: .7em;
    border: 1px rgba(51, 40, 18, 1);
  border-radius: 3px;
}

@media screen and (min-width: 768px) {
  .transparent-menu {
    background-color: rgba(255, 255, 255, .8);
    text-align: left;
    margin: auto;
    width: 20%;
    margin-top: 10%;
    margin-bottom: 10%;
    position: relative;
    color: rgba(115, 90, 41, 0.8);
    font-family: Biko, sans-serif;
    font-size: 1em;
    border: 1px rgba(51, 40, 18, 1);
    border-radius: 5px;
  }

}
input[type=text],
input[type=password],
input[type=tel],
input[type=file], {
  padding: 0.3em;
  padding-left: 1em;
  border: 2px rgba(51, 40, 18, 1);
  border-radius: 12px;
  background-color: rgba(255, 255, 255, 0.8);
  text-align: center;
  margin: auto;
  width: 70%;
  position: relative;
  color: rgba(115, 90, 41, 0.8);
  font-family: Biko;
  font-size: 1em;
}

#search .search-field,
#search [type=submit] {
	padding: 3px 6px;
}

input[type=text]:focus,
input[type=password]:focus {
  outline: none;
}

#main-search input[type=text],
#main-search button {
  width: 100%;
}

#main-search button {
  width: 30px;
  height: 30px;
  padding: 0;
}

.xs-input {
  width: 60px;
}

.form-group,
.form-row {
  margin-top: 20px;
}

.form-row:not(.center) {
  margin-left: 1em;
}
/********************************************
* buttons
********************************************/
.submit {
  padding: 0.3em;
  padding-left: 1em;
  border: 2px rgba(51, 40, 18, 1);
  border-radius: 12px;
  background-color: rgba(255, 255, 255, 1.0);
  text-align: center;
  margin: auto;
  width: 200px;
  /*margin-top: 12%;*/
  /*margin-bottom: 12%;*/
  position: relative;
  color: rgba(115, 90, 41, 0.8);
  font-family: Biko;
  font-size: 1em;
}

@media screen and (min-width: 768px) {
	.addButton,
	.addProductButton {
		margin-left: 117px;
	}
	.addLocationButton,
	.editProductButton {
		margin-left: 196px;
	}
}
/********************************************
* tables
********************************************/
td {
  vertical-align: middle !important;
}

.table tbody tr th,
.table tbody tr td {
	border-top: 0;
}

@media screen and (min-width: 768px) {
	.merchant-table {
		margin-left: 8em !important;
	}
}
/********************************************
* bootstrap setup
********************************************/
li[role=presentation] a:hover,
li[role=presentation] a:visited,
li[role=presentation] a:active,
li[role=presentation] a:focus,
li[role=presentation].open a {
  background-color: transparent !important;
}

#my-account-dropdown-menu {
  background-color: rgba(115, 90, 41, 0.8);
  }

/********************************************
* thumbnails
********************************************/
.thumbnail {
  padding: 2px;
}

.tiny-thumbnail,
.thumbnail img {
  width: 28px;
  height: 28px;
}

.thumbnail-links li {
  display: inline-block;
  margin-left: 0.1em;
  float: right;
}

@media screen and (min-width: 768px) {
  .tiny-thumbnail,
  .thumbnail img {
    width: 70px;
    height: 70px;
  }

  .thumbnail {
    padding: 4px;
  }

  .thumbnail-links li {
    margin-left: 1em;
  }
}


.thumbnail {
  display: inline-block;
}

.product-quantity {
  max-width: 80px;
}

/********************************************
* Utilities classes
********************************************/

/* no margin deprecated user mt0 instead */
.no-margin,
.mt0 {
  margin: 0 !important;
}

.mt5 {
	margin-top: 5px !important;

}

.mt10 {
	margin-top: 10px !important;
}

.mt20 {
	margin-top: 20px !important;
}

.mt25 {
	margin-top: 25px !important;

}

.mt30 {
  margin-top: 30px !important;
}

.mt40 {
	margin-top: 40px !important;
}

.mt60 {
  margin-top: 60px !important;
}
/* ... */

